Tue Apr 10 12:57:51 BST 2007  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,common/progclient.h,net/progclient.cc,
	  net/remoteconnection.cc,tests/api_db.cc,tests/apitest.cc,
	  tests/harness/backendmanager.cc,tests/harness/backendmanager.h:
	  Add support for the "prog" variant of the remote backend (patch
	  started by me, finished by Mark Hammond).

Tue Apr 10 12:23:46 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,backends/inmemory/inmemory_database.cc,
	  backends/quartz/quartz_alldocspostlist.cc,matcher/localmatch.cc,
	  matcher/multimatch.cc,tests/harness/testutils.cc: Prefer
	  `CONTAINER.empty()' to `CONTAINER.size() == 0'.

Tue Apr 10 12:09:45 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Tighten up an assertion.

Mon Apr 09 20:56:23 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac,tests/harness/backendmanager.cc,tests/runsrv.in,
	  tests/runtest.in: Run the remote backend server using new "runsrv"
	  script instead of "runtest".  This doesn't echo anything to stdout,
	  and if valgrind is in use, runs the remote server under
	  "--tool=none" which is much quicker than using valgrind's default
	  memcheck tool (we need to run the remote server under valgrind
	  because valgrind's emulation of excess FP precision isn't exact and
	  otherwise we get tests failing because of these differences).

Mon Apr 09 20:24:30 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc,tests/api_nodb.cc: Move test poscollapse2 to the
	  "no database" category, since it doesn't require a database!

Mon Apr 09 18:04:40 BST 2007  Olly Betts <olly@survex.com>

	* docs/remote_protocol.html: Correct documentation - MSG_REOPEN gives
	  a response of REPLY_UPDATE.

Mon Apr 09 15:08:44 BST 2007  Olly Betts <olly@survex.com>

	* ./: svn:eol-style not svn:eolstyle.

Mon Apr 09 15:00:30 BST 2007  Olly Betts <olly@survex.com>

	* ./: Set svn:eolstyle to native for most text files.
