@@ -1,3 +1,7 @@
+Tue Apr 10 14:18:06 BST 2007  Olly Betts <olly@survex.com>
+
+	* net/remoteconnection.cc: Remove debugging code.
+
 Tue Apr 10 12:57:51 BST 2007  Olly Betts <olly@survex.com>
 
 	* backends/dbfactory_remote.cc,common/progclient.h,net/progclient.cc,
